css/main.css
/* Selectors */

*,
  *::before,
  *::after {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
  }

  html {
    background: linear-gradient(
    rgba(214, 110, 110, 0.1),
    rgba(214, 110, 110, 0.1)
    ), url(/assets/grid_n.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
  }

  @font-face {
    font-family: 'dameron';
    src: url('/assets/dameron.ttf')  format('truetype');
  }

  @font-face {
    font-family: 'damerongrad';
    src: url('/assets/damerongrad.ttf')  format('truetype');
  }

  @font-face {
    font-family: 'dameronital';
    src: url('/assets/dameronital.ttf')  format('truetype');
  }

  @font-face {
    font-family: 'dameronlaser';
    src: url('/assets/dameronlaser.ttf')  format('truetype');
  }

  a {
    color: #6fff00;
    font-weight: bold;
    text-decoration: none;
  }

  a:hover {
    color: #fff60d;
    font-weight: 600;
    text-decoration: underline;
  }

  a:focus {
    font-weight: 600;
    padding: 0.25em;
    outline: 3px solid rgba(111, 255, 0, 0.6);
  }

  body {
    color: #f5fffe;
    font-family: 'Droid Sans Mono', monospace;
    font-size: 1.1em;
    -webkit-font-smoothing: antialiased;
    line-height: 1.6;
    margin: 0;
  }

  h1,
  h2,
  h3 {
    color: #f5fffe;
    font-weight: 600;
    line-height: 1.5;
  }

  h1 {
    font-size: 2.5em;
  }

  h2 {
    font-size: 2em;
  }

  li {
    line-height: 1.75em;
    margin-bottom: 0.5em;
  }

  main {
    margin: 0 auto;
    max-width: 700px;
    padding: 0 15px;
  }

  p {
    font-size: 1em;
  }

  time {
    color: #f5fffe;
  }

  /* Classes */

  .blog,
  .reading-list {
    display: flex;
    font-family: 'dameronital';
    margin: 150px 0 0;
    padding: 0px 15px;
  }

  .blog-posts,
  .books {
    list-style-type: circle;
  }

  .container {
    margin: -2.5em auto;
    max-width: 700px;
  }

  .copyright {
    color: #00ffff;
    font-family: 'damerongrad';
    font-size: .75em;
  }

  .intro {
    align-items: center;
    display: flex;
    height: 50vh;
    margin: 50px 0 0;
    padding: 0px 15px;
    text-align: center;
  }

  .nav-bottom nav {
    float: left;
    margin: 0 auto;
    max-width: 700px;
  }

  .nav-bottom {
    margin-top: 10em;
  }

  .nav-top {
    box-shadow: 0px 1px 1px RGBA(4, 25, 54, 0.1);
    height: 8em;
    left: 0;
    margin-top: -0.5em;
    padding-top: 2em;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 2;
  }

  .nav-top nav {
    float: left;
    margin: 0 auto;
    max-width: 700px;
    padding-left: 12px;
  }

  .nav-top nav ul,
  .nav-bottom nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  .nav-top nav ul li,
  .nav-bottom nav ul li {
    float: left;
    position: relative;
  }

  .nav-top nav ul li a {
    color: #f5fffe;
    display: block;
    font-family: 'damerongrad';
    line-height: 20px;
    margin-bottom: -1px;
    padding: 15px;
    text-decoration: none;
  }

  .nav-bottom nav ul li a {
    color: #f5fffe;
    display: block;
    font-family: 'dameronlaser';
    line-height: 20px;
    margin-bottom: -1px;
    padding: 15px;
    text-decoration: none;
  }

  .nav-top nav ul li a:hover,
  .nav-top nav ul li a:active,
  .nav-bottom nav ul li a:hover,
  .nav-bottom nav ul li a:active {
    color: #ee00ff;
    text-decoration: underline;
  }

  .nav-top nav ul li a:focus,
  .nav-bottom nav ul li a:focus {
    outline: 3px solid rgba(238, 0, 255, 0.6);
    color: #ee00ff;
  }

  .nav-top nav:after,
  .nav-bottom nav:after {
    clear: both;
    content: '';
    display: table;
  }

  .posts {
    margin: 200px 0 0;
    padding: 0px 15px;
  }

  .quote {
    color: #f5fffe;
    font-family: 'dameronital';
    font-size: 1.15em;
    margin-top: 5em;
  }

  .quote a {
    font-family: 'dameron';
    font-size: .75em;
  }

  .quote span {
    font-family: 'dameron';
    font-size: .75em;
  }

  .site-header {
    font-family: 'dameron';
    font-size: 1.75em;
    margin-bottom: 0;
    padding: 8px;
  }

  .site-header a {
    color: #f5fffe;
  }

  .site-header a:hover {
    color: #ee00ff;
  }

  .site-header a:focus {
    outline: 3px solid rgba(238, 0, 255, 0.6);
    color: #ee00ff;
  }

  .skip {
    padding-left: 2.5em;
  }

  .skip a {
    color: #6fff00;
    height: 1px;
    left: -10000px;
    overflow: hidden;
    position: absolute;
    top: auto;
    width: 1px;
  }

  .skip a:focus {
    outline: 3px solid rgba(111, 255, 0, 0.6);
    height: auto;
    position: static;
    width: auto;
  }

  .tolkien a,
  .tolkien a:focus,
  .tolkien a:hover {
    color: transparent;
    font-size: 0px;
  }

